modified web interface and added projects model

--- a/app/views/file_list/index.html.erb
+++ b/app/views/file_list/index.html.erb
@@ -13,7 +13,7 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>S3 File Manager</title>
+  <title>File List - <%= @project %></title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -27,6 +27,8 @@
 
   <!-- CSS : implied media="all" -->
   <%= stylesheet_link_tag "style" %>
+  <%= stylesheet_link_tag "jquery.fancybox-1.3.4" %>
+
 
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
@@ -37,67 +39,46 @@
 </head>
 
 <body>
+    <div class="header">
+      <%= image_tag "logo.png" %>
+      <ul>
+        <li><%= link_to "Dashboard", :controller => "dashboard" %></li>
+        <li><a href="#" class="selected">Project List</a></li>
+        <li><a href="#">Admin</a></li>
+      </ul>
+    </div>
+
 	<div class="container">
-
-		<div class="header-container">
-			<div class="header">
-                <%= image_tag "logo.png" %>
-				<fieldset id="search">
-					<input type="text" class="" value="" id="txtsearchcriteria">
-					<span class="menu-button"><a href="#" class="small blue gradient-button">Search</a></span>
-				</fieldset>
-			</div>
-		</div>
-
-		<div class="nav">
-			<ul>
-				<!-- <li><a href="#">Client List</a></li> -->
-				<li><%= link_to "File List", {:action => "index"}, :class=> "selected" %></li>
-			</ul>
-		</div>
-
-		<div class="content-container">
-            <% @buckets.each do |bucket|  %>
-			<div class="content">
-				<h3><%= bucket.name %></h3>
-				<table>
-                    <% if bucket.objects.count() > 0 %>
-                        <% bucket.objects.each do |object| %>
-                        <tr class="linkrow">
-						    <td><%= image_tag "fileicons/" + File.extname(object.key).to_s[1..4] + ".png" %></td>
-						    <td class="file-name"><a href='<%= AWS::S3::S3Object.url_for(object.key,bucket.name,:authenticated => false) %> '><%= object.key %></a></td>
-						    <td><span class="File-Status-Info">Last modified:</span><%= object.last_modified.strftime("%d-%m-%Y") %></td>
-					    </tr>
-                        <% end %>
-                    <% else %>
-                        <tr id="emptyRow">
-                            <td colspan="3">There is no files available to download.</td>
-                        </tr>
+        <div class="content">
+            <h2>Correspondence</h2>
+            <h3><%= @project %><span class="menu-button"><a href="/file_list/upload" class="small orange gradient-button" title="">+ Add document</a></span></h3>
+            <div class="file-list">
+                <ul>
+                    <% @bucket.objects.each do |object| %>
+                    <li>
+                        <%= image_tag "fileicons/" + File.extname(object.key).to_s[1..4] + ".png" %>
+                        <a href='<%= AWS::S3::S3Object.url_for(object.key,@project,:authenticated => false) %> '><%= object.key %></a>
+                        <ul class="file-menu">
+                            <li><a href="#">Add Comments</a></li>
+                            <li><a href="#">10 Comments</a></li>
+                            <li><a href="#">View History</a></li>
+                        </ul>
+                    </li>
                     <% end %>
-                        <tr id="noresultsrow">
-                            <td colspan="3">There is no file-link found for your search criteria.</td>
-                        </tr>
-			    </table>
-    			<div class="right-options">
-	    			<span class="menu-button"><%= link_to  "Upload documents", {:action => "upload"}, :class => "small blue gradient-button" %></span>
-		    	</div>
-			    <div class="clearfix"></div>
-			    </div>
-		    </div>
-            <% end %>
-	</div>
+                </ul>
+            </div>
+        </div>
+    </div>
+<!--Body !-->
+<!--! end of #container -->
 
-
-	<!--Body !-->
-   <!--! end of #container -->
+    <!-- Javascript at the bottom for fast page loading -->
 
 
 
-  <!-- Javascript at the bottom for fast page loading -->
-
-  <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
-  <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
+    <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+    <script>!window.jQuery && document.write(unescape('%3Cscript src="js/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
 
 
   <!-- scripts concatenated and minified via ant build script-->
@@ -118,6 +99,11 @@
   <!-- end profiling code -->
 
 
+    <%= javascript_include_tag "libs/jquery-1.4.2.min" %>
+    <%= javascript_include_tag "jquery.mousewheel-3.0.4.pack" %>
+    <%= javascript_include_tag "jquery.fancybox-1.3.4.pack" %>
+    <%= javascript_include_tag "filelist" %>
+
   <!-- asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
        change the UA-XXXXX-X to be your site's ID -->
   <script>
@@ -130,11 +116,6 @@
     s.parentNode.insertBefore(g, s);
    })(document, 'script');
   </script>
-
-  <%= javascript_include_tag "jquery-1.4.4.min" %>
-  <%= javascript_include_tag "jquery.quicksearch" %>
-  <%= javascript_include_tag "jquery.highlight-3" %>
-  <%= javascript_include_tag "UserInteractions" %>
 
 </body>
 </html>
