--- a/app/views/layouts/authentications.html.erb
+++ b/app/views/layouts/authentications.html.erb
@@ -10,6 +10,7 @@
   <title>Contract Right</title>
   <!-- CSS : implied media="all" -->
   <%= stylesheet_link_tag "style" %>
+  <%= stylesheet_link_tag "shadows" %>
   <!-- Uncomment if you are specifically targeting less enabled mobile browsers
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
