--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -10,7 +10,7 @@
                 <%= image_tag "icons3/Project-Icon.png" %>
                 <a href="/filelist/<%= project.name %>"><%= project.name %></a>
                 <ul class="file-menu">
-                    <li><a href="#" class="sub-menu">Edit project details</a></li>
+                    <li><a href="#" class="sub-menu"></a></li>
                 </ul>
             </li>
             <% end %>
