--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,14 +1,13 @@
 <div class="content">
     <h2>Dashboard</h2>
     <div class="project-list">
-        <h3>Clients<span class="menu-button"><a href="/clients/new" class="small orange gradient-button" title="">+ Create Client</a></span></h3>
+        <h3>Clients<span class="menu-button"><a href="/clients/new" class="small orange gradient-button" title="">+ Add new client</a></span></h3>
         <ul>
             <% @clients.each  do |client| %>
             <li>
-                <a href="/projectlist/<%= client.name %>"><%= client.name %></a>
-                <!-- This sub item list is just a place holder do not implement it. Still need to decide what comes here -->
+                <a href="/projectlist/<%= client.name %>"><%= client.name %></a>                <!-- This sub item list is just a place holder do not implement it. Still need to decide what comes here -->
                 <ul class="sub-items">
-                    <li><a href="/projectlist/<%= client.name %>"><%= client.projects.find(:all).length %> Projects</a></li>
+                    <li><a class="sub-menu" href="/projectlist/<%= client.name %>"><%= client.projects.find(:all).length %> Projects</a></li>
                 </ul>
             </li>
             <% end %>
