--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -368,7 +368,8 @@ span.menu-button
 .header
 {
 	padding: 10px;
-  background:#00A6CB;
+    background:#00A6CB;
+    min-width: 940px;
 }
 .header img
 {
